--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>go-api-rest</name>
+	<name>br.com.databuilder.med</name>
 	<comment></comment>
 	<projects>
 	</projects>
