--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasources:
     -
-      name: db_monster
-      url: jdbc:mysql://localhost:3306/db_monster
+      name: db_apiresttenancy
+      url: jdbc:mysql://localhost:3306/db_apiresttenancy
       username: root
       password: 
       driver-class-name: com.mysql.jdbc.Driver
